--- a/src/UI/Angular/src/app/modules/project/components/manage-project-modal/manage-project-modal.component.html
+++ b/src/UI/Angular/src/app/modules/project/components/manage-project-modal/manage-project-modal.component.html
@@ -65,7 +65,8 @@
       type="submit"
       classes="btn-primary ltr:ml-4 rtl:mr-4"
       class="d-block"
-      (click)="submitForm()"
+      (click)="!(projectId ? !isFormDirty : false) && submitForm()"
+      [disabled]="projectId ? !isFormDirty : false"
     ></app-button>
     @if (!projectId) {
       <app-button
