Disabled textbox of email, number textbox for estimated hours

--- a/src/UI/Angular/src/app/modules/auth/pages/accept-invitation/accept-invitation.component.html
+++ b/src/UI/Angular/src/app/modules/auth/pages/accept-invitation/accept-invitation.component.html
@@ -13,7 +13,7 @@
         <div>
           <label>First Name</label>
           <input
-            class="form-input"
+            class="form-input disabled-textbox"
             type="text"
             [disabled]="true"
             [value]="userInviteDto.firstName"
@@ -22,7 +22,7 @@
         <div>
           <label>Last Name</label>
           <input
-            class="form-input"
+            class="form-input disabled-textbox"
             type="text"
             [disabled]="true"
             [value]="userInviteDto.lastName"
@@ -32,7 +32,7 @@
       <div>
         <label>Email</label>
         <input
-          class="form-input"
+          class="form-input disabled-textbox"
           type="text"
           [disabled]="true"
           [value]="userInviteDto.email"
