--- a/src/UI/Angular/src/app/modules/project/components/manage-project-modal/manage-project-modal.component.html
+++ b/src/UI/Angular/src/app/modules/project/components/manage-project-modal/manage-project-modal.component.html
@@ -48,6 +48,7 @@
           [control]="formCreateProject.controls['estimatedHours']"
           [isSubmit]="isSubmitFormCreateProject"
           placeholder="Enter Estimated Hours"
+          type="number"
         ></app-input>
       </div>
     </form>
