changes as told to put back throwing exception to as it was not if throw exception in login will be returned as 400 Bad Request.

--- a/src/UI/Blazor/Modules/Login/Components/Login.razor
+++ b/src/UI/Blazor/Modules/Login/Components/Login.razor
@@ -109,7 +109,7 @@
         }
         else
         {
-            Notification.Failure(response.Message);
+            Notification.Failure(String.Join(",",response.Messages));
         }
     }
 
