--- a/src/UI/Blazor/Modules/ForgotPassword/Pages/ForgotPassword.razor
+++ b/src/UI/Blazor/Modules/ForgotPassword/Pages/ForgotPassword.razor
@@ -1,40 +1,48 @@
 ﻿@page "/forgotpassword"
+@layout Layout.Public.AuthLayout
 @using Starter.Blazor.Modules.ForgotPassword.Pages
 @using Starter.Blazor.Modules.ForgotPassword.Models
 @using Starter.Blazor.Modules.ForgotPassword.Services
 @inject IJSRuntime JSRuntime
 
 <div class="main-container min-h-screen text-black dark:text-white-dark">
-   
+
     <div class="flex min-h-screen items-center justify-center bg-[url('../images/map.svg')] bg-cover bg-center dark:bg-[url('../images/map-dark.svg')]">
         <div class="panel m-6 w-full max-w-lg sm:w-[480px]">
             <h2 class="mb-3 text-2xl font-bold">Forgot Password</h2>
             <p class="mb-7">Enter your email to recover your Password</p>
-            <form class="space-y-5" @onsubmit="SendResetRequest">
+            <form class="space-y-5" @onsubmit="SendForgotPasswordRequest">
                 <div>
                     <label for="email">Email</label>
                     <input id="email" @bind-value="Email" type="email" class="form-input" placeholder="Enter Email" />
+
                 </div>
-                <button type="submit" class="btn btn-primary w-full" >Send Request</button>
+                <div>
+                    <button type="submit" class="btn btn-primary w-full">Send Request</button>
+                </div>
+
+                <p class="text-right">
+                    <a href="/" class="font-bold text-primary hover:underline">Back To Login</a>
+                </p>
             </form>
         </div>
     </div>
-    
+
 </div>
 @code
 {
     private string Email;
     private ForgotPasswordDto forgotPassword = new ForgotPasswordDto();
 
-    private async Task SendResetRequest()
+    private async Task SendForgotPasswordRequest()
     {
         var forgotPassword = new ForgotPasswordDto
-         {
+            {
                 Email = Email
-    };
+            };
         try
         {
-            
+
             var result = await passwordservice.ForgotPasswordAsync(forgotPassword);
 
             Console.WriteLine($"Mail Send Successfully  {forgotPassword}");
@@ -43,12 +51,13 @@
         catch (Exception ex)
         {
             Console.WriteLine(ex.Message);
+            await JSRuntime.InvokeVoidAsync("showErrorAlert", ex.Message);
         }
     }
 
     [Inject]
-    private ForgotPasswordService passwordservice { get; set; }
-    
+    private IForgotPasswordService passwordservice { get; set; }
+
 }
 <script>
     function showSuccessAlert() {
@@ -56,6 +65,14 @@
             icon: 'success',
             title: 'Mail Sent Successfully!',
             text: 'Your reset password request has been sent successfully.',
+            padding: '2em',
+        });
+    }
+    function showErrorAlert(errorMessage) {
+        new window.Swal({
+            icon: 'error',
+            title: 'Error!',
+            text: 'Failed to send reset link',
             padding: '2em',
         });
     }
