--- a/src/UI/Blazor/App.razor
+++ b/src/UI/Blazor/App.razor
@@ -14,7 +14,8 @@
         </Found>
         <NotFound>
             <LayoutView Layout="@typeof(AuthLayout)">
-               <PageNotFound></PageNotFound>
+               @* <PageNotFound></PageNotFound> *@
+                <p>Sorry, there's nothing at this address.</p>
             </LayoutView>
         </NotFound>
     </Router>
