--- a/src/UI/Blazor/Modules/ForgotPassword/Pages/ForgotPassword.razor
+++ b/src/UI/Blazor/Modules/ForgotPassword/Pages/ForgotPassword.razor
@@ -1,4 +1,5 @@
 ﻿@page "/forgotpassword"
+@attribute [AllowAnonymous]
 @layout Layout.Public.AuthLayout
 @using Starter.Blazor.Modules.ForgotPassword.Pages
 @using Starter.Blazor.Modules.ForgotPassword.Models
